# astroimsim-spectra

./: .gitignore  Cargo.toml
data/: contamination  fuv  fuv_dic_mir  fuv_dic_mir_qe  fuv_filter_curve  fuvdichroic  input  input_plus_mirrors  lskf  mirror  mirror3  nuv_dic_mir  nuv_dic_mir_qe  nuv_filter_curve  nuv_filter_qe  nuv_qe_curve  nuvdichroic
src/: lib.rs  main.rs  photonic_spectrum.rs  power_spectrum.rs  spectral_response.rs  visualize.rs
