[package]
name = "astroimsim-spectra"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Spectra package for astroimsim ecosystem."

[dependencies]
astroimsim-geometry = "0.1.3"
plotpy = "1.22.0"
egui = "0.34.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
rand_distr = "0.6.0"
egui_plot = "0.35.0"
eframe = "0.34.3"
uvex-fitrs = "0.0.1"

